## Process this file with automake to produce Makefile.in
# Copyright (C) 2005 Predrag Miocinovic <predrag@phys.hawaii.edu>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# $Header: /cvsroot/anitacode/gse/Makefile.am,v 1.1.1.1 2005/07/20 03:12:17 predragm Exp $


SUBDIRS = lib unpack wvreader

EXTRA_DIRS = html tcp

EXTRA_DIST = los.fmt sip_hr.fmt sip_lr.fmt apache-setup.txt gse-setup.html create_tables.sql gseconf gsecontrol_single gsecontrol_smp send.pl linkfeed.pl pedValues.txt hkdValues.txt  sshkdValues.txt VERSION AnitaDatabaseLayout.html ANITA_GSE_Server_Data_Flow.html drop_tables.sql slowtable_upgrade.sql headertable_upgrade.sql makedb

DIST_SUBDIRS = $(SUBDIRS) $(EXTRA_DIRS)


