## Process this file with automake to produce Makefile.in
# Copyright (C) 2005 Predrag Miocinovic <predrag@phys.hawaii.edu>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# $Header: /net/local/cvsroot/photonics/scripts/Makefile.am,v 1.7 2003/07/10 23:
34:08 ped Exp $

EXTRA_DIST = status.cgi  index.html  querry.html  summary_request.html \
	home.html nav.html summary.cgi  title.cgi varcheck.cgi \
	status_request.html anitagse.pi last.cgi lastrf.cgi event.cgi \
	Temps.html

